[gd_scene load_steps=2 format=3 uid="uid://HUDScene"]

[ext_resource type="Script" path="res://scenes/ui/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="UnitInfoPanel" type="Panel" parent="."]
position = Vector2(10, 10)
size = Vector2(200, 150)
visible = false

[node name="NameLabel" type="Label" parent="UnitInfoPanel"]
text = "Имя юнита"

[node name="HealthBar" type="ProgressBar" parent="UnitInfoPanel"]
position = Vector2(0, 30)
size = Vector2(200, 20)

[node name="NeedsContainer" type="VBoxContainer" parent="UnitInfoPanel"]
position = Vector2(0, 60)

[node name="ResourcesPanel" type="Panel" parent="."]
position = Vector2(10, 170)
size = Vector2(200, 100)

[node name="WoodLabel" type="Label" parent="ResourcesPanel"]
text = "Дерево: 0"

[node name="StoneLabel" type="Label" parent="ResourcesPanel"]
position = Vector2(0, 20)
text = "Камень: 0"

[node name="FoodLabel" type="Label" parent="ResourcesPanel"]
position = Vector2(0, 40)
text = "Еда: 0"

[node name="NotificationLabel" type="Label" parent="."]
position = Vector2(0, 0)
size = Vector2(400, 50)
text = ""

[node name="GameSpeedLabel" type="Label" parent="."]
position = Vector2(10, 280)
text = "Скорость: 1x"